--- a/home.css
+++ b/home.css
@@ -10,6 +10,42 @@
 
 }
 
+@media (min-width: 300px){
+  #cont1 {
+    overflow-y: scroll;
+    width: 100%;
+	float: left;
+  }
+
+  #block{
+  	flex: 1 0 35%;
+  }
+}
+
+@media (min-width: 600px){
+  #cont1 {
+    overflow-y: scroll;
+    width: 100%;
+	float: left;
+  }
+
+  #block{
+  	flex: 1 0 25%;
+  }
+}
+
+@media (min-width: 1000px){
+  #cont1 {
+    overflow-y: scroll;
+    width: 100%;
+	float: left;
+  }
+
+  #block{
+  	flex: 1 0 21%;
+  }
+}
+
 #logo{
 	width: 100px;
 	height: 100px;
@@ -21,13 +57,11 @@
 #sidebar{
 	background-color: rgb(12, 112, 174);
 	color: white;
-	
 	padding: 20px;
 	float: right;
 	width: 300px;
-	height: 100vh;
+	height: 87vh;
 	padding-right: 20px;
-	position: fixed;
 
 }
 
@@ -38,7 +72,12 @@ h4{
 }
 
 #cont1{
-
+	overflow: auto;
+	text-align: center;
+	height: 87vh;
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: 30px;
 }
 
 #cont2{
@@ -211,6 +250,11 @@ input:checked + .slider:before {
 	margin-right: 20px;
 }
 
+#row1{
+	display: flex;
+	height: 100%;
+}
+
 .dark,
 .dark * {
     background-color: #222;
@@ -218,4 +262,11 @@ input:checked + .slider:before {
     border-color: #e6e6e6;
 }
 
+#block{
+	margin: 5px;
+}
 
+#blockImage{
+	width: 100%;
+	height: auto;
+}
